--- a/css/styles.css
+++ b/css/styles.css
@@ -675,13 +675,12 @@ body {
         background-color: #FCFCFC;
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
+        padding: 24px;
 }
 
 .modal-close-btn {
-        position: absolute;
-        top: 24px;
-        right: 24px;
-        display: flex;
+        display: block;
+        margin-left: auto;
         justify-content: center;
         align-items: center;
         cursor: pointer;
@@ -698,3 +697,76 @@ body {
 .modal-close-btn:focus {
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+.modal-title {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: center;
+        letter-spacing: 0.02em;
+        color: #2E2F42;
+        padding-top: 24px;
+        margin-bottom: 14px;
+}
+
+.modal-form {
+        display: flex;
+        flex-direction: column;
+}
+
+.modal-form-field {
+        margin-bottom: 8px;
+}
+
+.modal-form-desc {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.33;
+        letter-spacing: 0.04em;
+        color: #8E8F99;
+        margin-bottom: 4px;
+}
+
+.modal-form-input {
+        width: 100%;
+        height: 40px;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        padding-left: 38px;
+        background: #FCFCFC;
+}
+
+.modal-form-message {
+        width: 100%;
+        height: 120px;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.33;
+        padding-left: 16px;
+        padding-top: 8px;
+        color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-check {
+        
+}
+
+.modal-form-check-desc {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.33;
+        letter-spacing: 0.04em;
+        color: #757575;
+}
+
+.modal-form-submit {}
