--- a/css/styles.css
+++ b/css/styles.css
@@ -731,6 +731,10 @@ body {
         margin-bottom: 4px;
 }
 
+.modal-form-wrap {
+        position: relative;
+}
+
 .modal-form-input {
         width: 100%;
         height: 40px;
@@ -738,6 +742,13 @@ body {
         border-radius: 4px;
         padding-left: 38px;
         background: #FCFCFC;
+}
+
+.test-icon {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
 }
 
 .modal-form-message {
