--- a/css/styles.css
+++ b/css/styles.css
@@ -671,7 +671,7 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
         width: 408px;
-        height: 576px;
+        height: 584px;
         background-color: #FCFCFC;
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
@@ -679,7 +679,7 @@ body {
 }
 
 .modal-close-btn {
-        display: block;
+        display: flex;
         margin-left: auto;
         justify-content: center;
         align-items: center;
@@ -701,13 +701,13 @@ body {
 .modal-title {
         font-family: 'Roboto';
         font-style: normal;
-        font-weight: 500;
+        font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
         text-align: center;
         letter-spacing: 0.02em;
         color: #2E2F42;
-        padding-top: 24px;
+        margin-top: 12px;
         margin-bottom: 14px;
 }
 
@@ -742,16 +742,34 @@ body {
         border-radius: 4px;
         padding-left: 38px;
         background: #FCFCFC;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.test-icon {
+.modal-form-input:focus,
+.modal-form-input:hover {
+        outline: none;
+        border: 1px solid #4D5AE5;
+
+}
+
+.input-icon {
         position: absolute;
-        top: 0;
-        left: 0;
-        display: block;
+        top: 50%;
+        left: 16px;
+        transform: translateY(-50%);
+        fill: #2E2F42;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+}
+
+.modal-form-input:focus +.input-icon,
+.modal-form-input:hover +.input-icon {
+        fill: var(--accent-color);
+
 }
 
 .modal-form-message {
+        margin-top: 4px;
         width: 100%;
         height: 120px;
         border: 1px solid rgba(33, 33, 33, 0.2);
@@ -764,6 +782,20 @@ body {
         padding-left: 16px;
         padding-top: 8px;
         resize: none;
+        color: rgb(0, 0, 0);
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1); ;
+}
+
+.modal-form-message:focus,
+.modal-form-message:hover {
+        outline: none;
+        border: 1px solid var(--accent-color);
+}
+
+.modal-form-message::placeholder {
+        font-size: 12px;
+        line-height: 1.33;
+        letter-spacing: 0.04em;
         color: rgba(117, 117, 117, 0.5);
 }
 
@@ -780,6 +812,79 @@ body {
         line-height: 1.33;
         letter-spacing: 0.04em;
         color: #757575;
+        display: flex;
+        margin-bottom: 24px;
 }
 
-.modal-form-submit {}
+.modal-form-check-desc .check-box {
+        content: "";
+        width: 16px;
+        height: 16px;
+        border-radius: 2px;
+        border: 1.25px solid rgba(18, 18, 18);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: var(--background-color) 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        fill: transparent
+        
+        
+
+}
+
+
+.modal-form-check:checked + .modal-form-check-desc .check-box {
+        border: none;
+        background-color: var(--accent-color);
+        fill:#F4F4FD;       
+}
+
+.check-link {
+        color: #404BBF;
+}
+/*.modal-form-check-desc::before {
+        content: "";
+        width: 16px;
+        height: 16px;
+        border-radius: 2px;
+        border: 1.25px solid rgba(18, 18, 18);
+        display: block;
+        
+
+}
+.modal-form-check:checked + .modal-form-check-desc::before {
+     border: none; 
+     background: var(--accent-color); 
+     background-image: url(../img/check.svg); 
+     background-repeat: no-repeat;
+     background-position: center;
+}
+*/
+.modal-form-check.is-hidden {
+        visibility: hidden;
+        
+}
+.modal-form-submit {
+        align-self: center;
+        display: block;
+        padding: 16px 32px;
+        margin: 0 auto;
+        min-width: 169px;
+        text-align: center;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #FFFFFF;
+        background-color: var(--accent-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        border: var(--accent-color);
+        cursor: pointer;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+        background-color: #404BBF;
+        box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
