--- a/css/styles.css
+++ b/css/styles.css
@@ -89,10 +89,15 @@ body {
         
 }
 
-.header-list {
+.header-nav-list {
         display: flex;
         gap: 40px;
         margin-left: 77px;
+}
+
+.header-list {
+        display: flex;
+        gap: 40px;
 }
 
 .header-items {
@@ -193,15 +198,15 @@ body {
         border: #4D5AE5;
         border-radius: 4px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .top-btn:hover,
 .top-btn:focus {
-        background-color: #4D5AE5;
+        background-color: #404BBF;
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
                         0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-        border-radius: 4px;
+
 }
 
 
@@ -407,14 +412,14 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
 }
 
 .customers-link:hover,
 .customers-link:focus {
         border-color: var(--accent-color);
-        fill: var(--accent-color);
+        
 }
 
 .customers-icon {
@@ -461,7 +466,10 @@ body {
         font-size: 16px;
         line-height: 1.5;
         display: flex;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
         align-items: center;
         text-align: center;
         letter-spacing: 0.04em;
@@ -479,7 +487,6 @@ body {
     background-color: #404BBF;
     color:#FFFFFF;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
     border: 1px solid #404BBF
 }
 
@@ -648,6 +655,88 @@ body {
 .footer-soc-icon {
         fill: #F4F4FD;
 }
+
+.footer-sub {
+        margin-left: 80px;
+        
+}
+.footer-sub-title {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #FFFFFF;
+        margin-bottom: 16px;
+}
+
+.footer-sub-wrap {
+        display: flex;
+        flex-direction: row;
+        gap: 24px;
+}
+.footer-sub-field {
+}
+
+.footer-sub-input {
+        width: 264px;
+        height: 40px;
+        padding: 8px 16px;
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        color: rgba(255, 255, 255);
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+        background-color: transparent;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.footer-sub-input:focus {
+        outline: none;
+        border: 1px solid var(--accent-color);
+}
+
+.footer-sub-input::placeholder {
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        color: rgba(255, 255, 255, 0.6);
+      }
+
+.footer-sub-btn {
+        display: inline-flex;
+        cursor: pointer;
+        padding: 8px 24px;
+        min-width: 165px;
+        text-align: center;
+        align-items: center;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #FFFFFF;
+        background-color: var(--accent-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        border-color: var(--accent-color);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+}
+.footer-sub-btn:hover,
+.footer-sub-btn:focus {
+        background-color: #404BBF;
+        box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.footer-sub-icon {
+        fill: #FFFFFF;
+        margin-left: 16px;
+}
+
+
 /*---------Modal------*/
 .backdrop {
         position: fixed;
@@ -701,7 +790,7 @@ body {
 .modal-title {
         font-family: 'Roboto';
         font-style: normal;
-        font-weight: 400;
+        font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         text-align: center;
@@ -745,8 +834,7 @@ body {
         transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-input:focus,
-.modal-form-input:hover {
+.modal-form-input:focus {
         outline: none;
         border: 1px solid #4D5AE5;
 
@@ -762,8 +850,7 @@ body {
         
 }
 
-.modal-form-input:focus +.input-icon,
-.modal-form-input:hover +.input-icon {
+.modal-form-input:focus +.input-icon {
         fill: var(--accent-color);
 
 }
@@ -786,8 +873,7 @@ body {
         transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1); ;
 }
 
-.modal-form-message:focus,
-.modal-form-message:hover {
+.modal-form-message:focus {
         outline: none;
         border: 1px solid var(--accent-color);
 }
@@ -827,9 +913,6 @@ body {
         justify-content: center;
         transition: var(--background-color) 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
         fill: transparent
-        
-        
-
 }
 
 
@@ -888,3 +971,4 @@ body {
         background-color: #404BBF;
         box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
